// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with BAM authentication and default props 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication__authentication"
  >
    <span>
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="BAM-9.5.0"
      >
        BAM
        :
         
        <u>
          BAM-9.5.0
        </u>
      </a>
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with BAM authentication and props 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication__authentication varClassName"
  >
    <span>
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="BAM-9.5.0"
      >
        BAM
        :
         
        <u>
          BAM-9.5.0
        </u>
      </a>
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with Micetro authentication 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication__authentication"
  >
    <span>
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="Micetro-10"
      >
        Micetro
        :
         
        <u>
          Micetro-10
        </u>
      </a>
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with Standalone authentication 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication__authentication"
  >
    <span>
      Standalone
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with disable show authentication 1`] = `<React.Fragment />`;
